<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"
        android:text="@string/details_region_caption"
        />

    <TextView
        android:id="@+id/regionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/black"
        tools:text="Кам'янка (Фрунзенський)"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"
        android:text="@string/details_old_caption"
        />

    <TextView
        android:id="@+id/oldName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/black"
        tools:text="вулиця Білостоцького"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"
        android:text="@string/details_new_caption"
        />

    <TextView
        android:id="@+id/newName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        tools:text="вулиця Любарського"
        />

    <Button
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:drawableLeft="@drawable/ic_action_globe"
        android:drawablePadding="@dimen/button_drawable_padding"
        android:text="@string/details_button_caption"
        />
</LinearLayout>
